# mamba-memory

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README.zh-CN.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
data/: training_data.json
examples/: basic_usage.py  benchmark.py  benchmark_gate_v2.py  fiction_usage.py  test_complex_scenarios.py  test_local_embedding.py
integrations/openclaw/: index.ts  openclaw.plugin.json  package.json
integrations/openclaw/src/: flush-plan.ts  mcp-bridge.ts  prompt-section.ts  tools.ts
mamba_memory/: __init__.py  cli.py  config.py
mamba_memory/core/: embedding.py  engine.py  llm.py  text.py  types.py
mamba_memory/core/l1/: session.py
mamba_memory/core/l2/: evolver.py  gate.py  learned_gate.py  recaller.py  state.py
mamba_memory/core/l3/: backend.py  knowledge_graph.py  store.py
mamba_memory/presets/: __init__.py  fiction.py  finance.py  legal.py  medical.py  sales.py
mamba_memory/sdk/: __init__.py  client.py
mamba_memory/server/http/: app.py  dashboard.py
mamba_memory/server/mcp/: server.py
scripts/: add_discard_samples.py  generate_bulk_data.py  generate_training_data.py
tests/: test_engine.py  test_l1.py  test_l2.py  test_l3.py  test_mcp_integration.py  test_text.py
